hover border removed.

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ html {
 
 .add-btn:hover {
     background-color: rgb(195, 226, 53);
-    border: 2px solid black;
+    /* border: 2px solid black; */
     cursor: pointer;
 }
 
